--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <a href="#"
           ><img
             class="header-logo-img"
-            src="/image/cropped-footer-logo-1.png"
+            src="image/cropped-footer-logo-1.png"
             alt=""
         /></a>
       </div>
     </div>
     <div id="backgrond-img-div">
-      <img id="backgrond-img" src="/image/image-background.jpg" />
+      <img id="backgrond-img" src="image/image-background.jpg" />
     </div>
     <div id="h-top">
       <h1 id="h1-top">ERFAN Naboureh<span>.</span>Frontend<span>.</span>Developer</h1>
@@ -72,7 +72,7 @@
         <a href="#">
           <img
             class="img-col"
-            src="/image/front-page-project-3.jpg"
+            src="image/front-page-project-3.jpg"
             alt=""
           />
         </a>
@@ -81,7 +81,7 @@
         <a href="#">
           <img
             class="img-col"
-            src="/image/front-page-project-2.jpg"
+            src="image/front-page-project-2.jpg"
             alt=""
           />
         </a>
@@ -90,7 +90,7 @@
         <a href="#">
           <img
             class="img-col"
-            src="/image/front-page-project-1.jpg"
+            src="image/front-page-project-1.jpg"
             alt=""
           />
         </a>
@@ -98,7 +98,7 @@
     </div>
     <div id="div6">
       <h3 class="h3-3">Testimonials</h3>
-      <img id="icon-div6" src="/image/mike-muller-127x127.jpg" alt="" />
+      <img id="icon-div6" src="image/mike-muller-127x127.jpg" alt="" />
       <div id="p2-div6">
         <p class="p2">
           Awesome theme with great design and awesome support. If you don’t know
@@ -152,7 +152,7 @@
       <a href="#" id="div8-button">See blog</a>
       <div class="div8-1">
         <div id="div8-1-1">
-          <img src="/image/3.jpg" alt="" />
+          <img src="image/3.jpg" alt="" />
           <h5 class="div8-1-h5">
             <a class="div8-textdecuration" href="#"
               >We Have Made Illdy Theme SEO Friendly</a
@@ -164,7 +164,7 @@
           </p>
         </div>
         <div id="div8-1-2" class="with8">
-          <img src="/image/2.jpg" alt="" />
+          <img src="image/2.jpg" alt="" />
           <h5 class="div8-1-h5">
             <a class="div8-textdecuration" href="#"
               >Stunning One Page WordPress Theme For Masses</a
@@ -176,7 +176,7 @@
           </p>
         </div>
         <div id="div8-1-3">
-          <img src="/image/4.jpg" alt="" />
+          <img src="image/4.jpg" alt="" />
           <h5 class="div8-1-h5">
             <a class="div8-textdecuration" href="#">Hello world!</a>
           </h5>
